# RBAC_research_project

./: .env.temp  .gitignore  README.md  Research project structure and layout.docx  benchmark_balanced_role_tree_stats.csv  benchmark_deep_role_tree_stats.csv  benchmark_wide_role_tree_stats.csv  main.py  plot.py  pyproject.toml
Performace_test/: connection_testing.py  create_balanced_role_tree.py  create_deep_role_tree.py  create_wide_role_tree.py  database.ini  run_benchmarks.py  setup.py  utils.py
Performace_test/Select_tests/: create_trees.py  select_star.py
Performace_test/Snowflake/: create_balanced_role_tree.py  create_deep_role_tree.py  create_wide_role_tree.py  run_benchmarks.py
Performace_test/Snowflake/sql/: deep_role_sql.py
Performace_test/sql/: balanced_role_sql.py  cleanup_sql.py  deep_role_sql.py  grant_sql.py  setup_sql.py  wide_role_sql.py
benchmark/: Add_benchmark_id.py
databaseSql/: Initial_data_process.sql  Initial_processing.sql  MariaDBSQL.sql  Mariadb_connectionUser.sql  Median_barchart.sql  PostgreSQL.sql  Process_data_to_graph.sql  Readme.md  Side_code.sql  Side_verification.sql  barcharts.sql  processing.sql  select_star.sql
